<resources>
    <string name="app_name">Analyse</string>

    <string name="login_label_username">帐号：</string>
    <string name="login_label_password">密码：</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">请输入6位数的学号或工号</string>
    <string name="login_find_pwd">忘记密码？ 找回</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_auto">自动登录</string>
    <string name="login_digit_element">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="degree_school">学校：</string>
    <string name="degree_grade">年级</string>
    <string name="degree_class">班级</string>
    <string name="degree_power">身份</string>
    
    <string name="confirm">ok</string>
    <string name="cancel">取消</string>

    <string name="reset_pwd">修改密码</string>
    <string name="cur_pwd">原密码：</string>
    <string name="new_pwd">新密码：</string>
    <string name="input_cur_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="cur_pwd_null">* 原密码不能为空！</string>
    <string name="cur_pwd_error">* 原密码错误！</string>
    <string name="new_pwd_error">* 新密码必须跟原密码不同！</string>
    <string name="new_pwd_null">* 新密码不能为空！</string>
    <string name="new_pwd_again_null">* 新密码不能为空！</string>
    <string name="two_no_same">* 两次输入的新密码不相同！</string>

    <string name="log_off">注销</string>
    <string name="user_message">个人信息</string>
    <string name="help">帮助</string>

    <string name="register_school_name">请输入学校名</string>
    <string name="register_degree_teacher">老师</string>
    <string name="register_degree_student">学生</string>

    <string name="register_input_school">请输入有效的学校名</string>
    <string name="register_check_grade">请选择你的班级</string>
    <string name="register_check_class">请选择你的年级</string>
    <string name="register_check_degree">请选择你的身份</string>

    <string name="show_all_score">成绩一览</string>
    <string name="show_user_message">个人信息页</string>


    <string name="exam_detail">基本信息</string>
    <string name="score_detail">总分一览</string>
    <string name="score_ch">语文得分：</string>
    <string name="score_math">数学得分：</string>
    <string name="score_en">英语得分：</string>
    <string name="grade_max">年级最高分</string>
    <string name="grade_avg">年级平均分</string>
    <string name="class_max">班级最高分</string>
    <string name="class_avg">班级平均分</string>
    <string name="show_detail">查看详情</string>



</resources>
