<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_10">
    <TextView
        android:id="@+id/cur_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4"
        android:textColor="@android:color/holo_red_dark"
        />
    <EditText
        android:id="@+id/input_cur_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_cur_pwd"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:digits="@string/login_digit_element"
        />
    <TextView
        android:id="@+id/new_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4"
        android:textColor="@android:color/holo_red_dark"
        />
    <EditText
        android:id="@+id/input_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_new_pwd"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:digits="@string/login_digit_element"
        />
    <TextView
        android:id="@+id/new_pwd_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4"
        android:textColor="@android:color/holo_red_dark"
        />
    <EditText
        android:id="@+id/input_new_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_new_pwd_again"
        android:background="@drawable/bg_edittext"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:digits="@string/login_digit_element"
        />
</LinearLayout>