<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:drop="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light">

    <com.gdin.analyse.tools.DropEditText
        android:id="@+id/degree_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        drop:drawableRight="@drawable/drop"
        drop:dropMode="flow_parent"
        drop:hint="@string/degree_school"/>
    <Button
        android:id="@+id/degree_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        android:background="@drawable/bg_loginbtn"
        />
    <Button
        android:id="@+id/degree_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel"
        android:background="@drawable/bg_loginbtn"
        />


</RelativeLayout>
