<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    >

    <TextView
        android:id="@+id/en_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_4"
        android:text="@string/score_en"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/en_score_title"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:id="@+id/grade_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/en_score_title">
        <TextView
            android:id="@+id/grade_max_label"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="@string/grade_max"
            />
        <TextView
            android:id="@+id/grade_en_max_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="888"
            />
        <TextView
            android:id="@+id/grade_avg_label"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="@string/grade_avg"
            />
        <TextView
            android:id="@+id/grade_en_avg_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="666"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/class_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/grade_ll">
        <TextView
            android:id="@+id/class_max_label"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="@string/class_max"
            />
        <TextView
            android:id="@+id/class_en_max_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="888"
            />
        <TextView
            android:id="@+id/class_avg_label"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="@string/class_avg"
            />
        <TextView
            android:id="@+id/class_en_avg_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:text="666"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/class_ll"
        android:background="@android:color/darker_gray"
        />
    <TextView
        android:id="@+id/en_confirm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/class_ll"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/show_detail"
        android:textColor="@color/colorAccent"
        />
</RelativeLayout>